tidyverse is cool

--- a/HTMLtutorial.html
+++ b/HTMLtutorial.html
@@ -1776,7 +1776,8 @@ interested parties.</p>
 </div>
 <div id="share-your-work-in-rpubs" class="section level1">
 <h1>SHARE YOUR WORK IN RPUBS!!!</h1>
-<p><a href="https://rpubs.com">Rpubs</a></p>
+<p><a href="https://rpubs.com">Rpubs</a> - Press publish after knitting
+on the top right.</p>
 </div>
 
 
